syntax = "proto3";

service WarehouseConnector {
  rpc data(WarehouseRequest) returns (WarehouseResponse) {}

}

message WarehouseRequest {
  int32 warehouseID = 1;
}

message Product {
  string productID = 1;
  string productName = 2;
  string productCategory = 3;
  string productUnit = 4;
}

message WarehouseResponse {
  int32 warehouseID = 1;
  string warehouseName = 2;
  string warehouseAddress = 3;
  string warehouseCountry = 4;
  string warehouseCity = 5;
  string warehousePostalcode = 6;
  string timestamp = 7;
  repeated Product products = 8;
}